--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <script type="module" src="./donutchart/src/lib/chartjs-plugin-datalabels.min.js"></script>
 
 
-
+  <style>
+        body{background-color:#ECF5F9;}
+  </style>
 
   <script type="importmap-shim">
       {
