--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <html>
 
 <head>
-  <script type="module" src="./demo.js"></script>
-  <script type="module" src="./donutchart/src/lib/chart.min.js"></script>
-  <script type="module" src="./donutchart/src/lib/chartjs-plugin-datalabels.min.js"></script>
-
+  <script type="module" src="./dist/demo/index.js"></script>
 
   <style>
         body{background-color:#ECF5F9;}
   </style>
 
-  <script type="importmap-shim">
-      {
-        "imports": {
-          "lit-element": "https://cdn.jsdelivr.net/gh/meveo-org/mv-dependencies@master/lit-element.js",
-          "mv-container": "https://cdn.jsdelivr.net/gh/meveo-org/mv-container@master/mv-container.js",
-        }
-      }
-  </script>
-
 
 </head>
 
 <body>
-  <mv-chart-bubble-demo>
-  </mv-chart-bubble-demo>
+  <mv-donut-demo>
+  </mv-donut-demo>
 
 
 </body>
